Grails 7 test fixes

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,26 +1,19 @@
 assetPipelineVersion=5.0.1
-gebVersion=7.0
 # used to pull latest -SNAPSHOT version
 grailsCoreBranch=7.0.x
 grailsGradlePluginVersion=7.0.0-SNAPSHOT
 grailsSitemesh3Version=7.0.0-SNAPSHOT
 # used by grails-gradle-plugin to force the groovy version
-groovyVersion=4.0.23
+groovyVersion=4.0.24-SNAPSHOT
 jakartaXmlBindVersion=4.0.2
 
 # no longer comes from grails-bom
 micronautVersion=4.6.5
 micronautSerdeJacksonVersion=2.11.0
-
-seleniumVersion=4.25.0
+gebPluginVersion=5.0.0-SNAPSHOT
 servletApiVersion=6.0.0
 springSecurityCoreVersion=7.0.0-SNAPSHOT
 # required for org.grails.plugins:views-gradle version
 viewsVersion=4.0.0-SNAPSHOT
-
-webdriverBinariesVersion=3.2
-chromeDriverVersion=126.0.6478.126
-geckodriverVersion=0.32.2
-seleniumSafariDriverVersion=4.25.0
 
 org.gradle.caching=true
