--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,12 @@ subprojects {
     repositories {
         maven { url "https://repo.grails.org/grails/core" }
         mavenCentral()
+        if(groovyVersion.endsWith('-SNAPSHOT')) {
+            maven {
+                name = 'ASF Snapshot repo'
+                url = 'https://repository.apache.org/content/repositories/snapshots'
+            }
+        }
     }
 
     tasks.withType(Test) {
