--- a/gradle/geb.gradle
+++ b/gradle/geb.gradle
@@ -1,3 +1,3 @@
 dependencies {
-    integrationTestImplementation testFixtures('org.grails.plugins:geb:5.0.0-SNAPSHOT')
+    integrationTestImplementation testFixtures("org.grails.plugins:geb:$gebPluginVersion")
 }
