Update to groovy 4.0.24 release (#263)

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ grailsCoreBranch=7.0.x
 grailsGradlePluginVersion=7.0.0-SNAPSHOT
 grailsSitemesh3Version=7.0.0-SNAPSHOT
 # used by grails-gradle-plugin to force the groovy version
-groovyVersion=4.0.24-SNAPSHOT
+groovyVersion=4.0.24
 jakartaXmlBindVersion=4.0.2
 
 # no longer comes from grails-bom
