--- a/plugins/issue11005/build.gradle
+++ b/plugins/issue11005/build.gradle
@@ -30,7 +30,7 @@ dependencies {
 
     api "org.grails:grails-web-boot"
     api "org.grails:grails-dependencies"
-    api "jakarta.servlet:jakarta.servlet-api:$servletApiVersion"
+    api "jakarta.servlet:jakarta.servlet-api"
 
     testImplementation "org.grails:grails-web-testing-support"
     testImplementation "org.grails:grails-gorm-testing-support"
