--- a/app1/build.gradle
+++ b/app1/build.gradle
@@ -5,8 +5,11 @@ buildscript {
     dependencies {
         classpath "org.grails:grails-gradle-plugin:$grailsGradlePluginVersion"
         classpath "com.bertramlabs.plugins:asset-pipeline-gradle:$assetPipelineVersion"
-        classpath "gradle.plugin.com.energizedwork.webdriver-binaries:webdriver-binaries-gradle-plugin:$webdriverBinariesVersion"
     }
+}
+
+plugins {
+    id 'com.github.ben-manes.versions' version '0.39.0'
 }
 
 version "0.1"
@@ -16,7 +19,6 @@ apply plugin: "war"
 apply plugin: "asset-pipeline"
 apply plugin: "org.grails.grails-web"
 apply plugin: "org.grails.grails-gsp"
-apply plugin:"com.energizedwork.webdriver-binaries"
 
 assets {
     minifyJs = true
