--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ subprojects {
     }
 
     repositories {
+        mavenLocal()
         maven { url "https://repo.grails.org/grails/core" }
     }
 
