--- a/build.gradle
+++ b/build.gradle
@@ -17,13 +17,19 @@ ext {
     grailsVersion = grailsVersionList[0]
 }
 
-subprojects {
+subprojects { prj ->
     configurations.all {
         // check for updates every build
         resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
     }
 
+    String useMavenLocal = project.findProperty('mavenLocal')
     repositories {
+        if (useMavenLocal || useMavenLocal != 'last') {
+            println "Using mavenLocal() first on project `${prj.name}`"
+            mavenLocal()
+        }
+
         maven { url "https://repo.grails.org/grails/core" }
         mavenCentral()
         if(groovyVersion.endsWith('-SNAPSHOT')) {
@@ -31,6 +37,10 @@ subprojects {
                 name = 'ASF Snapshot repo'
                 url = 'https://repository.apache.org/content/repositories/snapshots'
             }
+        }
+        if (useMavenLocal == 'last') {
+            println "Using mavenLocal() last on project `${prj.name}`"
+            mavenLocal()
         }
     }
 
